# kata-containers

./: versions.yaml
src/agent/: Cargo.toml
src/agent/protocols/protos/: image.proto
src/agent/src/: config.rs  image_rpc.rs  rpc.rs
src/dragonball/: Cargo.toml
src/dragonball/docs/: api.md  vcpu.md
src/dragonball/src/: address_space_manager.rs  error.rs  kvm_context.rs  resource_manager.rs
src/dragonball/src/api/v1/: boot_source.rs  machine_config.rs  vmm_action.rs
src/dragonball/src/device_manager/: blk_dev_mgr.rs  fs_dev_mgr.rs  memory_region_handler.rs  mod.rs  virtio_net_dev_mgr.rs
src/dragonball/src/vcpu/: vcpu_impl.rs  vcpu_manager.rs
src/dragonball/src/vm/: mod.rs  x86_64.rs
src/libs/netns-rs/: Cargo.toml  README.md
src/libs/netns-rs/src/: lib.rs  netns.rs
src/runtime/: go.mod  go.sum
src/runtime-rs/: Cargo.toml
src/runtime-rs/crates/hypervisor/src/: lib.rs
src/runtime-rs/crates/runtimes/src/: manager.rs
src/runtime-rs/crates/service/: Cargo.toml  build.rs
src/runtime-rs/crates/service/src/: lib.rs  manager.rs  sandbox_service.rs
src/runtime-rs/crates/shim/: Cargo.toml
src/runtime/pkg/containerd-shim-v2/: create.go  image.go
src/runtime/virtcontainers/: agent.go  container.go  interfaces.go  kata_agent.go  mock_agent.go  sandbox.go
tools/agent-ctl/src/: client.rs
tools/osbuilder/image-builder/: build.sh
tools/osbuilder/rootfs-builder/: run.sh
tools/osbuilder/rootfs-builder/centos/: Dockerfile.in  config.sh
tools/osbuilder/scripts/: lib.sh
tools/packaging/kernel/: build-kernel.sh
(+12 files in other folders)
