[package]
name = "netns-rs"
version = "0.1.0"
description = "A library to handle network namespaces in Rust"
keywords = ["kata", "container", "network", "namespaces"]
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
repository = "https://github.com/kata-containers/kata-containers.git"
homepage = "https://katacontainers.io/"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
nix = "0.23.1"
thiserror = "1.0.30"
